[tool.pyprojectx]
main = ["pdm"]

[tool.pdm]
distribution = true

[project]
name = "sla_monitoring"
version = "0.1.0"
description = "Tool to monitoring target completion time of tasks in data pipeline and alerting possible missed SLA based on prediction"
authors = [
    {name = "giangblackk", email = "giangblackk@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "apscheduler>=3.10.4",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
